fix issue with z-index of arrows

--- a/app/assets/stylesheets/admin/users.css.scss
+++ b/app/assets/stylesheets/admin/users.css.scss
@@ -31,7 +31,7 @@ body#application header{
   opacity: 0;
   top:0px;
   left:0px;
-  z-index:50;
+  z-index:10;
   border-color: transparent transparent #f7f7f9 transparent;
 }
 
